# MedhaOne

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  opening-stock-kraft-test.csv  package.json  pnpm-lock.yaml  skills.md  tsconfig.json
apps/api/: .coverage  .env.example  Dockerfile  alembic.ini  openapi.json  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260225_0001_init_user_role.py  20260226_0002_inventory_core.py  20260226_0003_login_audit.py  20260227_0004_purchase_grn.py  20260227_0005_audit_log.py  20260227_0006_reporting_indexes.py  20260228_0007_rbac_core.py  20260301_0008_user_external_auth.py  20260301_0009_company_settings.py  20260303_0010_purchase_credit_and_reports.py  20260304_0011_product_quantity_precision.py  20260305_0012_tax_rates.py  20260305_0013_party_gstin_pan.py  20260306_0014_party_location_fields.py  20260306_0015_report_filter_indexes_v2.py  20260307_0016_stock_ops_audit_history.py  20260308_0017_user_theme_preference.py  20260308_0018_sales_phase1.py  20260308_0019_company_settings_pan_number.py  20260308_0020_purchase_order_tax_breakdown.py  20260308_0021_purchase_bill_module.py  20260308_0022_party_master_redesign.py  20260308_0023_purchase_order_line_tax_fields.py  20260309_0024_grn_multibatch_bill_linking.py  20260309_0025_master_categories.py  20260309_0026_master_brands.py  20260309_0027_stock_source_provenance.py  20260309_0028_product_master_storage_decimal.py  20260311_0029_warehouse_racks.py  20260312_0030_drug_license_verification.py  20260312_0031_drug_license_log_optional_party.py  20260312_0032_gst_verification.py  20260618_0033_category_party_types.py  20260618_0034_party_gst_status_taxpayer.py  20260619_0033_party_drug_license_2.py  20260619_0035_party_drug_license_2.py  20260619_0036_party_gst_additional_addresses.py  20260621_0037_product_unit_price.py  (+1 more)
apps/api/app/: main.py  seed.py  testing.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_audit_trail.py  test_company_settings.py  test_config_security.py  test_credit_notes.py  test_dead_stock_report.py  test_drug_license_verification.py  test_expiry_report.py  test_gst_verification.py  test_inventory_service.py  test_inventory_smoke.py  test_masters_bulk_import.py  test_party_gst_requirement.py  test_purchase_analytics.py  test_purchase_bills.py  test_purchase_grn_e2e.py  test_purchase_order_workflow.py  test_purchase_tax.py  test_rbac.py  test_reports.py  test_sales.py  test_setu_gst_verification.py  test_stock_adjustment.py  test_stock_ageing.py  test_stock_correction.py  test_tax_rates.py  test_tenancy.py  test_tenant_isolation.py  test_token_source_validation.py  test_user_preferences.py
(+885 files in other folders)
